--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,14 @@
    			<groupId>org.springframework.boot</groupId>
    			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		    <version>2.2.1</version>
+		    <scope>test</scope>
+		</dependency>
+		
         
 
 	</dependencies>
