--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/storeapp
+spring.datasource.username=root
+spring.datasource.password=kinho
